--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "license": "MIT",
   "version": "1.0.0",
-  "private":"true",
+  "private": "true",
   "type": "module",
   "scripts": {
     "setup": "git init && npx husky init && npx playwright install && shx rm .husky/pre-commit",
@@ -42,16 +42,25 @@
     "@tanstack/react-query": "^5.53.1",
     "@tanstack/react-router": "^1.51.6",
     "@tanstack/react-table": "^8.20.5",
+    "@types/jszip": "^3.4.0",
+    "@types/papaparse": "^5.3.16",
+    "ag-grid-community": "^34.1.2",
+    "ag-grid-react": "^34.1.2",
     "dayjs": "^1.11.13",
+    "dexie": "^4.2.0",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.540.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
