[FIXED] reverted back with old version of rule files as it was working previously fine

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
 		"noPropertyAccessFromIndexSignature": true,
 		"noUncheckedIndexedAccess": true
 	},
-	"include": ["src", "e2e"],
+	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
